# zyper

./: .prettierrc  LICENSE  README.md  eslint.config.mjs  index.html  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  Translation.tsx  about.tsx  app.tsx  consts.ts  i18n.ts  index.css  main-router.tsx  main.css  main.tsx  settings-router.tsx  settings.tsx  translation.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: key_event.rs  lib.rs  main.rs  settings.rs  state.rs  utils.rs
src-tauri/src/commands/: mod.rs  parser.rs  settings.rs  triggers.rs
src/components/: Settings.tsx  dropzone.tsx  layout.tsx  navbar.tsx  provider.tsx  settings.tsx  translation-list.tsx
src/components/ui/: button.tsx  checkbox.tsx  resizable.tsx  select.tsx  tooltip.tsx
src/hooks/: debounce.ts  dropzone.ts  resize.ts  trigger.ts
src/lib/: cache.ts  core.ts  utils.ts
src/locales/: en.json  vi.json
src/stores/: settings.ts  translation.ts
