[package]
name = "zyper"
version = "0.1.0"
description = "Zyper is a typing tool that helps you type your manga translation faster by reducing the \"copy-paste\" process."
authors = ["Partridge <anhduc130703@gmail.com>"]
license = "MIT"
edition = "2024"

[lib]
name = "zyper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1.10"
moka = { version = "0.12", features = ["future"] }
tauri = { version = "2.4", features = [] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-store = "2.2"
tokio = { version = "1.44", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "deny"
cast_sign_loss = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
needless_return = "warn"
no_effect_underscore_binding = "warn"
used_underscore_binding = "allow"
needless_pass_by_value = "allow"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn" }
unsafe_code = "forbid"
