[package]
name = "zyper"
version = "1.1.1"
description = "Typing tool"
authors = ["Partridge <anhduc130703@gmail.com>"]
license = "MIT"
edition = "2024"

[lib]
name = "zyper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
incremental = false
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arc-swap = "1.7"
bytes = "1.10"
libc = "0.2.171"
moka = { version = "0.12", features = ["future"] }
rdev = { version = "0.5", features = ["serialize", "unstable_grab"] }
tauri = { version = "2.4", features = [] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-store = "2.2"
tokio = { version = "1.44", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "deny"
cast_sign_loss = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
needless_return = "warn"
no_effect_underscore_binding = "warn"
used_underscore_binding = "allow"
needless_pass_by_value = "allow"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn" }
unsafe_code = "warn"
